manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifact-size-delta-calculator-ing
  namespace: caldera
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifact-size-delta-calculator-svc
            port:
              number: 80
